--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "Just learnin to publish somthin",
   "dependencies": {
     "@linclark/pkg": "^1.0.2"
   }
